force-app/main/default/objects/AI_Query_Log__c/AI_Query_Log__c.object-meta.xml
<CustomObject>
    <label>AI Query Log</label>
    <nameField>
        <displayFormat>AQL-{0000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Query Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>