force-app/main/default/objects/AI_Query_Log__c/fields/Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Id__c</fullName>
    <label>Batch ID</label>
    <type>Text</type>
    <length>100</length>
</CustomField>