force-app/main/default/objects/AI_Query_Log__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <label>Error Type</label>
    <type>Text</type>
    <length>255</length>
</CustomField>