force-app/main/default/objects/AI_Query_Log__c/fields/Final_SOQL__c.field-meta.xml
<CustomField>
    <fullName>Final_SOQL__c</fullName>
    <label>Final SOQL</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>