force-app/main/default/objects/AI_Query_Log__c/fields/Initial_SOQL__c.field-meta.xml
<CustomField>
    <fullName>Initial_SOQL__c</fullName>
    <label>Initial SOQL</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>