force-app/main/default/objects/AI_Query_Log__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>